[gd_scene load_steps=8 format=3 uid="uid://bkpwk03yv1u06"]

[ext_resource type="Script" path="res://Globals/AudioManager.gd" id="1_5vccw"]
[ext_resource type="AudioStream" uid="uid://q32pyjv2c8dr" path="res://Sounds/344312__musiclegends__laser-shoot7.wav" id="2_qufx1"]
[ext_resource type="AudioStream" uid="uid://cxb3mt4jlql37" path="res://Sounds/341626__aceofspadesproduc100__small-boom.wav" id="3_ecr0g"]
[ext_resource type="AudioStream" uid="uid://4uaiwyqfnb1d" path="res://Sounds/350919__cabled_mess__hurt_c_05.wav" id="4_l77ak"]
[ext_resource type="AudioStream" uid="uid://c622dkf8dei0w" path="res://Sounds/681764__supersouper__metal-barrel-hit.wav" id="4_wqjhm"]
[ext_resource type="AudioStream" uid="uid://crd2ka3y28gso" path="res://Sounds/104943__glaneur-de-sons__bubble-4.wav" id="6_gccm8"]
[ext_resource type="AudioStream" uid="uid://kr4i0ihtsdj7" path="res://Sounds/530885__evanboyerman__heavybig-sci-fi-cinematic-explosion-w-tail.wav" id="7_rlibg"]

[node name="Node2D" type="Node"]
script = ExtResource("1_5vccw")

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qufx1")
volume_db = -30.0

[node name="SmallBoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ecr0g")
volume_db = -10.0

[node name="PlayerHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l77ak")
volume_db = -20.0

[node name="PlayerDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wqjhm")
volume_db = -30.0

[node name="BubbleUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gccm8")

[node name="BigExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rlibg")
volume_db = -10.0

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer11" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer12" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer13" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer14" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer15" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer16" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer17" type="AudioStreamPlayer" parent="."]
